# peerhub

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/application/accounts/use_cases/: delete_account.py  get_activity_feed.py  get_current_account.py
backend/app/application/github/use_cases/: authenticate_with_github.py  get_user.py  search_users.py
backend/app/application/reviews/use_cases/: __init__.py  create_or_update_review.py  delete_review.py  get_my_reviews.py  get_reviewers.py  get_reviews.py  get_suggestions.py  toggle_comment_hidden.py
backend/app/application/watchlist/use_cases/: check_watch.py  get_watchlist.py  unwatch.py  watch.py
backend/app/domain/accounts/entities/: account.py
backend/app/domain/accounts/repositories/: account_repository.py
backend/app/domain/accounts/services/: account_service.py
backend/app/domain/reviews/entities/: review.py
backend/app/domain/reviews/repositories/: review_repository.py
backend/app/domain/reviews/services/: comment_sanitizer.py  review_enrichment_service.py  review_service.py
backend/app/domain/reviews/value_objects/: review_with_username.py
backend/app/domain/shared/: constants.py  exceptions.py
backend/app/domain/shared/services/: token_service.py  validators.py
backend/app/domain/users/entities/: user.py
backend/app/domain/users/repositories/: user_repository.py
backend/app/domain/users/services/: user_service.py
backend/app/domain/watchlist/entities/: watch.py
backend/app/domain/watchlist/repositories/: watchlist_repository.py
backend/app/infrastructure/email/: email_service.py
backend/app/infrastructure/shared/: constants.py
backend/app/presentation/api/: exception_handlers.py  routes.py
backend/tests/: conftest.py
backend/tests/factories/: account_factory.py
backend/tests/integration/: conftest.py
(+260 files in other folders)
